dinoco_docs/src/content/v0.0.2/ru-ru/orm/relations.mdx
export const title = "Отношения";

# Отношения

Отношения связывают модели друг с другом в схеме Dinoco.

Эта страница охватывает `@relation(...)`, `onDelete`, `onUpdate` и наиболее распространенные шаблоны отношений.

---

## @relation(...)

Атрибут `@relation(...)` определяет, как две модели связаны.

Поддерживаемые параметры:

| Параметр     | Использование                                    |
| :----------- | :----------------------------------------------- |
| `name`       | Явное имя отношения                              |
| `fields`     | Локальные поля, используемые в качестве ключа    |
| `references` | Поля, на которые ссылается целевая модель        |
| `onDelete`   | Поведение при удалении связанной записи          |
| `onUpdate`   | Поведение при обновлении связанного значения     |

Полный пример:

```dinoco
model Post {
	id       Integer @id @default(autoincrement())
	title    String
	authorId Integer?
	author   User?   @relation(fields: [authorId], references: [id], onDelete: Cascade, onUpdate: SetNull)
}
```

## onDelete и onUpdate

Dinoco предоставляет ссылочные действия для управления тем, что происходит, когда связанная запись изменяется или удаляется.

Поддерживаемые значения:

| Действие     | Значение                                         |
| :----------- | :----------------------------------------------- |
| `Cascade`    | Распространяет операцию на зависимые записи      |
| `SetNull`    | Устанавливает внешний ключ в `null`              |
| `SetDefault` | Устанавливает значение по умолчанию, настроенное для поля |

Пример:

```dinoco
model Comment {
	id      Integer @id @default(autoincrement())
	postId  Integer?
	post    Post?   @relation(fields: [postId], references: [id], onDelete: Cascade, onUpdate: SetNull)
}
```

Используйте `SetNull` только тогда, когда локальное поле является необязательным.

## Один ко многим

Это наиболее распространенное отношение: одна родительская запись имеет несколько дочерних.

```dinoco
model User {
	id    Integer @id @default(autoincrement())
	name  String
	posts Post[]
}

model Post {
	id       Integer @id @default(autoincrement())
	title    String
	authorId Integer
	author   User    @relation(fields: [authorId], references: [id], onDelete: Cascade, onUpdate: Cascade)
}
```

Мысленное прочтение:

- Один `User` может иметь несколько `Post`.
- Каждый `Post` принадлежит одному `User`.

## Многие ко многим

В отношениях многие ко многим обе стороны имеют списки.

```dinoco
model User {
	id    Integer @id @default(autoincrement())
	name  String

	roles Role[]
}

model Role {
	id    Integer @id @default(autoincrement())
	name  String

	users User[]
}
```

Мысленное прочтение:

- Один `User` может иметь несколько `Role`.
- Одна `Role` может принадлежать нескольким `User`.

## Самостоятельное отношение

Самостоятельное отношение возникает, когда модель связана сама с собой.

```dinoco
model User {
	id        Integer @id @default(autoincrement())
	name      String
	managerId Integer?
	manager   User?   @relation(name: "UserManager", fields: [managerId], references: [id], onDelete: SetNull, onUpdate: Cascade)
	reports   User[]  @relation(name: "UserManager")
}
```

Мысленное прочтение:

- У пользователя может быть менеджер.
- У пользователя может быть несколько подчиненных.

## Практические советы

- Используйте `name`, когда между одними и теми же моделями существует более одного отношения.
- Используйте `onDelete: Cascade`, когда дочерний элемент не имеет смысла без родительского.
- Используйте `onDelete: SetNull`, когда отношение может быть разорвано без удаления дочерней записи.
- Используйте самостоятельные отношения с явными именами для облегчения чтения и генерации кода.

## Справочная схема для примеров

Приведенные ниже примеры используют следующую схему:

```dinoco
config {
	database = "sqlite"
	database_url = env("DATABASE_URL")
}

enum Role {
	ADMIN
	USER
}

model User {
	id             String     @id @default(uuid())
	username       String     @unique
	role           Role       @default(USER)

	profile        Profile?

	followers      User[]     @relation(name: "UserFollows")
	following      User[]     @relation(name: "UserFollows")

	posts          Post[]     @relation(name: "PostAuthor")
	comments       Comment[]  @relation(name: "CommentAuthor")

	likedPosts     Post[]     @relation(name: "PostLikers")
	likedComments  Comment[]  @relation(name: "CommentLikers")
}

model Profile {
	id      String   @id @default(uuid())
	bio     String?
	userId  String   @unique
	user    User     @relation(fields: [userId], references: [id])
}

model Post {
	id        String     @id @default(uuid())
	title     String
	content   String

	authorId  String
	author    User       @relation(name: "PostAuthor", fields: [authorId], references: [id])

	likers    User[]     @relation(name: "PostLikers")

	comments  Comment[]

	tags      Tag[]
}

model Comment {
	id        String     @id @default(uuid())
	text      String

	parentId  String?
	parent    Comment?   @relation(name: "CommentReplies", fields: [parentId], references: [id])
	replies   Comment[]  @relation(name: "CommentReplies")

	postId    String
	post      Post       @relation(fields: [postId], references: [id])

	authorId  String
	author    User       @relation(name: "CommentAuthor", fields: [authorId], references: [id])

	likers    User[]     @relation(name: "CommentLikers")
}

model Tag {
	id     String  @id @default(uuid())
	name   String  @unique

	posts  Post[]
}
```

## Пример поиска со всеми возможными отношениями, начиная с User

Если вы хотите начать с модели `User` и загрузить все прямые отношения в одном запросе на чтение, вы можете комбинировать `select::<T>()` с несколькими `includes(...)`.

```rust
use dinoco::{Extend, find_many};

#[derive(Debug, Clone, Extend)]
#[extend(Profile)]
struct ProfileView {
	id: String,
	bio: Option<String>,
}

#[derive(Debug, Clone, Extend)]
#[extend(User)]
struct UserRelationItem {
	id: String,
	username: String,
}

#[derive(Debug, Clone, Extend)]
#[extend(Tag)]
struct TagView {
	id: String,
	name: String,
}

#[derive(Debug, Clone, Extend)]
#[extend(Comment)]
struct CommentView {
	id: String,
	text: String,
	replies: Vec<CommentReplyView>,
	likers: Vec<UserRelationItem>,
}

#[derive(Debug, Clone, Extend)]
#[extend(Comment)]
struct CommentReplyView {
	id: String,
	text: String,
}

#[derive(Debug, Clone, Extend)]
#[extend(Post)]
struct PostView {
	id: String,
	title: String,
	content: String,
	likers: Vec<UserRelationItem>,
	tags: Vec<TagView>,
	comments: Vec<CommentView>,
}

#[derive(Debug, Clone, Extend)]
#[extend(User)]
struct UserWithAllRelations {
	id: String,
	username: String,
	profile: Option<ProfileView>,
	followers: Vec<UserRelationItem>,
	following: Vec<UserRelationItem>,
	posts: Vec<PostView>,
	comments: Vec<CommentView>,
	likedPosts: Vec<PostView>,
	likedComments: Vec<CommentView>,
}

let users = find_many::<User>()
	.select::<UserWithAllRelations>()
	.includes(|user| user.profile())
	.includes(|user| user.followers())
	.includes(|user| user.following())
	.includes(|user| {
		user.posts()
			.includes(|post| post.likers())
			.includes(|post| post.tags())
			.includes(|post| {
				post.comments()
					.includes(|comment| comment.replies())
					.includes(|comment| comment.likers())
			})
	})
	.includes(|user| {
		user.comments()
			.includes(|comment| comment.replies())
			.includes(|comment| comment.likers())
	})
	.includes(|user| {
		user.likedPosts()
			.includes(|post| post.likers())
			.includes(|post| post.tags())
			.includes(|post| {
				post.comments()
					.includes(|comment| comment.replies())
					.includes(|comment| comment.likers())
			})
	})
	.includes(|user| {
		user.likedComments()
			.includes(|comment| comment.replies())
			.includes(|comment| comment.likers())
	})
	.execute(&client)
	.await?;
```

Этот шаблон полезен, когда вы хотите создать полное представление о пользователе за одно чтение, ориентированное на отношения.

## Пример вставки с отношением, использующим User и Profile

Чтобы вставить запись с отношением 1:1, используя новый API, поместите отношение в полезную нагрузку `Extend`, помеченную `#[insertable]`.

```rust
use dinoco::insert_into;

#[derive(Debug, Clone, dinoco::Extend)]
#[extend(User)]
#[insertable]
struct UserWithProfile {
	id: String,
	username: String,
	role: Role,
	profile: Option<Profile>,
}

let created_user = insert_into::<User>()
	.values(UserWithProfile {
		id: "user-1".to_string(),
		username: "bia".to_string(),
		role: Role::USER,
		profile: Some(Profile {
			id: "profile-1".to_string(),
			bio: Some("Engenheira de software".to_string()),
			userId: String::new(),
		}),
	})
	.execute(&client)
	.await?;
```

В этом потоке:

- Сначала вставляется `User`.
- Затем создается связанный `Profile`.
- Ключ `userId` связывается потоком отношений Dinoco.

## Пример insert_many с вложенными отношениями

Используйте `#[insertable]`, когда вы хотите вставить несколько родительских записей, а для каждой из них также вставить несколько новых связанных записей.

```rust
use dinoco::insert_many;

#[derive(Debug, Clone, dinoco::Extend)]
#[extend(Post)]
#[insertable]
struct PostWithComments {
	id: String,
	title: String,
	content: String,
	authorId: String,
	comments: Vec<Comment>,
}

let posts = vec![
	PostWithComments {
		id: "post-1".to_string(),
		title: "Primeiro post".to_string(),
		content: "Conteudo do primeiro post".to_string(),
		authorId: "user-1".to_string(),
		comments: vec![
			Comment {
				id: "comment-1".to_string(),
				text: "Muito bom".to_string(),
				parentId: None,
				postId: String::new(),
				authorId: "user-2".to_string(),
			},
			Comment {
				id: "comment-2".to_string(),
				text: "Gostei do exemplo".to_string(),
				parentId: None,
				postId: String::new(),
				authorId: "user-3".to_string(),
			},
		],
	},
	PostWithComments {
		id: "post-2".to_string(),
		title: "Segundo post".to_string(),
		content: "Conteudo do segundo post".to_string(),
		authorId: "user-1".to_string(),
		comments: vec![
			Comment {
				id: "comment-3".to_string(),
				text: "Quero mais detalhes".to_string(),
				parentId: None,
				postId: String::new(),
				authorId: "user-2".to_string(),
			},
		],
	},
];

insert_many::<Post>()
	.values(posts)
	.execute(&client)
	.await?;
```

В этом потоке:

- Каждый `Post` вставляется.
- Dinoco создает вложенные `Comment` и связывает каждую группу с правильным `Post` во время записи.

## Пример insert_many с вложенными соединениями

Используйте перечисление `PostConnection`, сгенерированное codegen, когда вы хотите вставить несколько родительских записей и связать каждую из них с несколькими уже существующими записями.

```rust
use dinoco::insert_many;

#[derive(Debug, Clone, dinoco::Extend)]
#[extend(Post)]
#[insertable]
struct PostWithTags {
	id: String,
	title: String,
	content: String,
	authorId: String,
	tags: Vec<PostConnection>,
}

insert_many::<Post>()
	.values(vec![
		PostWithTags {
			id: "post-10".to_string(),
			title: "Rust e Dinoco".to_string(),
			content: "Post sobre produtividade".to_string(),
			authorId: "user-1".to_string(),
			tags: vec![
				PostConnection::Tag("tag-1".to_string()),
				PostConnection::Tag("tag-2".to_string()),
			],
		},
		PostWithTags {
			id: "post-11".to_string(),
			title: "Relações avançadas".to_string(),
			content: "Post sobre includes e relacoes".to_string(),
			authorId: "user-1".to_string(),
			tags: vec![
				PostConnection::Tag("tag-2".to_string()),
				PostConnection::Tag("tag-3".to_string()),
			],
		},
	])
	.execute(&client)
	.await?;
```

В этом потоке:

- `Post` вставляются.
- Существующие `Tag` связываются с соответствующими постами.
- Каждая полезная нагрузка определяет свои соединения с помощью перечисления, сгенерированного codegen.

## Следующие шаги

- [**Перечисления**](/v0.0.2/orm/enums): узнайте, как представлять контролируемые значения в схеме.
- [**Модели**](/v0.0.2/orm/models): ознакомьтесь со структурой полей и примерами поиска, вставки, обновления и удаления с помощью API Dinoco.
